--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,13 +55,15 @@
   <p><a href="news">Earlier news ...</a></p>
 
   <h1>Recent Publications</h1>
-  <ul class="publication-icon-list">
-  {% sorted_for publication in site.publications reversed sort_by:year  %}
-    {% if publication.year > 2013 %}
-    <li><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a><br>{{publication.year}}</li>
-    {% endif %}
-  {% endsorted_for %}
-  </ul>
+
+      <ul class="publication-icon-list">
+          {% assign sorted_publications = (site.publications | sort: 'year' %}
+          {% for publication in sorted_publications reversed%}
+          {% if publication.year > 2013 %}
+          <li><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a><br>{{publication.year}}</li>
+          {% endif %}
+          {% endfor %}
+      </ul>
 
   </article>
 
@@ -75,36 +77,25 @@
 
     <h1>Projects</h1>
     <ul class="project-icon-list">
-      {% sorted_for project in site.projects sort_by:order %}
-      {% if project.status == 'core' %}
-      <li><a href="{{ site.baseurl }}{{ project.url}}">{{ project.name }}</a><br>{{ project.title }}</li>
-      {% endif %}
-      {% endsorted_for %}
-    </ul>
-    <ul class="project-icon-list">
-      {% sorted_for project in site.projects sort_by:order %}
-      {% if project.status == 'prototype' %}
-      <li><a href="{{ site.baseurl }}{{ project.url}}">{{ project.name }}</a><br>{{ project.title }}</li>
-      {% endif %}
-      {% endsorted_for %}
-    </ul>
+      {% assign sorted_projects = (site.projects | sort: 'order' %}
+      {%for project in sorted_projects %}
 
-    <h1>Latest Release</h1>
-    <ul class="release-icon-list">
-      <li><a href="{{ site.baseurl }}{{ site.releases.last.url}}">Caleydo {{ site.releases.last.version }}</a><br>{{ site.releases.last.date | date: "%-d %b %Y" }}</li>
+      <li><a href="{{ site.baseurl }}{{ project.url}}">{{ project.name }}</a><br>{{ project.title }}</li>
+      {% endfor %}
     </ul>
 
 
     <h1>Funding</h1>
     <ul class="funding-icon-list">
-      {% sorted_for grant in site.funding sort_by:agency %}
+        {% assign sorted_grants = (site.funding | sort: 'agency' %}
+      {% for grant in sorted_grants %}
       {% if grant.active != empty %}
       {% if agency != grant.agency %}
       <li><a href="{{ site.baseurl }}/funding">{{ grant.agency }}</a></li>
       {% endif %}
       {% endif %}
       {% assign agency = grant.agency %}
-      {% endsorted_for %}
+      {% endfor %}
     </ul>
   </article>
 
