some cleanup, wrote a brief intro

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,19 +24,12 @@
 
   <h1>About</h1>
 
- <p>Caleydo is an open source visual analysis framework targeted at biomolecular data. The biggest strength of Caleydo is the visualization of interdependencies between multiple datasets. Caleydo can load tabular data and groupings/clusterings. You can explore relationships between multiple groupings, between different datasets and see how your data maps onto pathways.
-   Caleydo has been successfully used to analyze mRNA, miRNA, methylation, copy number variation, mutation status and clinical data as well as other datset types.</p>
+ <p>We are a team of visualization researchers at the University of Utah. Our interests include the process of designing and developing visualizations, visualization for biology, visualization frameworks,  and, more generally, visualization of big, heterogeneous, and complex datasets. VDL is part of the <a href="http://www.sci.utah.edu/">Scientific Computing and Imaging Institute</a> and the <a href="http://www.cs.utah.edu/">School of Computing</a>. </p>
 
- <p>All published parts of the software are available as open source. Developers and researchers that want to use or enhance the current tools are invited to contribute. See our <a href="https://github.com/Caleydo/">Github page</a>  for further details.</p>
 
-      <div class="Caleydosel">
-          <!--position: relative; top:-25px;-->
-          <div><center><a href="projects/pathways/"><img class="Caleydosel-image" data-lazy="assets/images/projects/pathways_lowRes.png" /><div style="font-weight: bold">Pathway Visualization.</div></a></center></div>
-        <div><center><a href="projects/stratomex/"><img class="Caleydosel-image" data-lazy="assets/images/projects/StratomeX_lowRes.png" /><div style="font-weight: bold">StratomeX</div></a></center></div>
-        <div><center><a href="projects/contour/"><img class="Caleydosel-image" data-lazy="assets/images/projects/2014_vast_contour.png"/><div style="font-weight: bold">ConTour</div></a></center></div>
-          <div><center><a href="projects/lineup/"><img class="Caleydosel-image" data-lazy="assets/images/projects/lineup_lowRes.png"/><div style="font-weight: bold">LineUp</div></a></center></div>
-          <div><center><a href="projects/domino/"><img class="Caleydosel-image" data-lazy="assets/images/projects/domino_lowRes.png"/><div style="font-weight: bold">Domino</div></a></center></div>
-      </div>
+
+
+
   <h1>News <span class="right-icon"><a href="{{ site.baseurl }}/feed.xml"><i class="fa fa-rss"></i></a></span></h1>
 
   <ul class="post-list">
