updated vials information, documented the vials publication page as a reference

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -76,7 +76,7 @@ layout: default
     {% if page.external-project %}
     <h1>Project Website</h1>
     <ul class="project-icon-list">
-            <li><a href="page.external-project">{{ page.shortname }} Website</a></li>
+            <li><a href="{{page.external-project}}">{{ page.shortname }} Website</a></li>
     </ul>
     {% endif %}
 
