simplified image markup

--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -15,7 +15,7 @@ layout: default
 
       <a href="{{ site.baseurl }}{{ publication.url }}"><img alt="{{ publication.shortname }} screenshot"
                                                              class="paper-image-small"
-                                                             src="{{ publication.image }}"></a>
+                                                             src="/assets/images/papers/{{ publication.image }}"></a>
 
       <p>
         {% for author in publication.authors %}
