--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -112,7 +112,9 @@ layout: default
     {% endif %}
     </ul>
 
+    {% if page.video or page.preview-video %}
     <h1>Videos</h1>
+    {% endif %}
     {% for video in site.videos %}
     {% if video.key == page.video or video.key == page.preview-video %}
     <div class="video">
@@ -120,7 +122,9 @@ layout: default
       <div class="video-wrapper">
         <iframe width="853" height="480" src="//www.youtube.com/embed/{{video.youtube-id}}?controls=2&showinfo=0&iv_load_policy=3" frameborder="0" allowfullscreen></iframe>
       </div>
+      {% if video.file %}
       <p><i class="fa fa-download"></i> &nbsp;<a href="{{site.paper_content_url}}{{video.file}}">Download Video</a><p/>
+      {% endif %}
     </div>    
     {% endif %}
     {% endfor %}
