--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -106,9 +106,20 @@ layout: default
     {% if page.supplements %}
 	{% for supplement in page.supplements %}
     <li>
-      <i class="fa fa-download"></i> &nbsp;<a href="{% if supplement.abslink %}{{ supplement.abslink }}{% else %}{{site.paper_content_url}}{{ supplement.link }}{% endif %}">{{supplement.name}}</a>
+      {% if supplement.linksym %}
+      <i class="fa fa-external-link"></i>
+      {% else %}
+      <i class="fa fa-download"></i>
+      {% endif %}
+      &nbsp;<a href="{% if supplement.abslink %}{{ supplement.abslink }}{% else %}{{site.paper_content_url}}{{ supplement.link }}{% endif %}">{{supplement.name}}</a>
     </li>
 	{% endfor %}
+    {% endif %}
+      
+    {% if page.code %}
+    <li>
+      <i class="fa  fa-github"></i> &nbsp;<a href="{{ page.code }}">Source Code</a>
+    </li>
     {% endif %}
     </ul>
 
