--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <div class="navigation">
     <div class="logo">
-        <embed class="logo-header-svg" src="{{ site.baseurl }}/assets/images/logos/caleydo.svg" type="image/svg+xml">
+       <!-- <embed class="logo-header-svg" src="{{ site.baseurl }}/assets/images/logos/vdl.png" type="image/svg+xml">-->
+        <img style="height: 100px" src="{{ site.baseurl }}/assets/images/logos/vdl.png" alt="vdl logo">
     </div>
 
     <div class="navigation-buttons">
