--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -20,11 +20,16 @@ $light-red: #FBE3E4;
 $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 
-$home-color: #149747;
-$team-color: #3DB7DD;
+
+$home-color: #AD3A33;
+//$home-color: #149747;
+$team-color: #D44942;
+//$team-color: #3DB7DD;
 $project-color: #EB0021;
 $download-color: #F36229;
-$publication-color: #FDB938;
+
+$publication-color: #D66157;
+//$publication-color: #FDB938;
 $presentation-color: $download-color;
 $help-color: #B2B2B2;
 $neutral-color: $help-color;
