Many little adjustments

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
   <div class="footer-content">
     <div class="footer-disclaimer">
       <p>
-        Caleydo is a joint project of
+        The visualization design lab is part of
       </p>
     </div>
     <div class="footer-list-institutions">
@@ -70,11 +70,11 @@
 
   <div class="footer-content">
     <span class="footer-logo">
-      <embed class="logo-footer-svg" src="{{ site.baseurl }}/assets/images/logos/caleydo_c.svg" type="image/svg+xml">
+      <embed class="logo-footer-svg" src="{{ site.baseurl }}/assets/images/logos/bottle.svg" type="image/svg+xml">
     </span>
     <div class="footer-disclaimer">
       <p>
-        Copyright &copy; 2014 The Caleydo Team. All content on this website is licensed under the <br />
+        Copyright &copy; 2015 The Visualization Design Lab. All content on this website is licensed under the <br />
         <a href="http://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license (CC BY)</a>. Copyright of the linked papers is with the publishers.
       </p>
     </div>
