--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -16,7 +16,10 @@ layout: default
       <h1>PhD Students</h1>
 
       {% include person.html role="phdstudent" %}
-
+      
+      <h1>Masters Students</h1>
+      
+      {% include person.html role="msstudent" %}
   </article>
 
 
