--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -1,9 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Patua+One|Vollkorn:400italic,700italic,400,700);
-@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(http://fonts.googleapis.com/css?family=Rokkitt:400,700);
 
-$sans-serif-font-family: Lato, Helvetica, sans-serif;
-$serif-font-family: Lato, Helvetica, sans-serif; //Vollkorn, Times, serif;
-$slab-font-family: Patua One, Helvetica, sans-serif;
+$sans-serif-font-family: Montserrat, Trebuchet, sans-serif;
+$serif-font-family: Montserrat, Trebuchet, sans-serif; //Vollkorn, Times, serif;
+$slab-font-family: Rokkitt, Trebuchet, sans-serif;
 
 $page-title-font-family: $sans-serif-font-family;
 $page-title-font-weight: 900;
