Whoops! Forgot undergrad section...

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -20,6 +20,10 @@ layout: default
       <h1>Masters Students</h1>
       
       {% include person.html role="msstudent" %}
+      
+      <h1>Undergraduate Students</h1>
+      
+      {% include person.html role="undergrad" %}
   </article>
 
 
