removed caleydo name

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,7 +17,7 @@
     {% include header.html %}
 
   <header class="home-title">
-    <h1>{{ page.title | remove: "| Caleydo" }}</h1>
+    <h1>{{ page.title | remove: "| Vis Design Lab" }}</h1>
   </header>
 
   <article class="home-content-main">
