--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -2,7 +2,7 @@
 layout: default
 ---
   <header class="publications-title">
-    <h1>{{ page.title | remove: "| Caleydo" }}</h1>
+    <h1>{{ page.title | remove: "| Vis Design Lab" }}</h1>
   </header>
 
   <article class="publications-content">
