--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,14 +3,15 @@
        <!-- <embed class="logo-header-svg" src="{{ site.baseurl }}/assets/images/logos/vdl.png" type="image/svg+xml">-->
         <img style="height: 100px" src="{{ site.baseurl }}/assets/images/logos/vdl.png" alt="vdl logo">
     </div>
-
+	<!--<span class="nav-icon"><i class="fa fa-home"></i></span><span class="nav-icon"><i class="fa fa-user"></i></span><span class="nav-icon"><i class="fa fa-cog"></i></span><span class="nav-icon"><i class="fa fa-book"></i></span>-->
+	
     <div class="navigation-buttons">
 	  <ul>
         <li class="home-button">
-          <a href="{{ site.baseurl }}/"><span class="nav-icon"><i class="fa fa-home"></i></span><span class="nav-text">Home</span></a>
+          <a href="{{ site.baseurl }}/"><span class="nav-text">HOME</span></a>
         </li>
         <li class="team-button">
-          <a href="{{ site.baseurl }}/team/"><span class="nav-icon"><i class="fa fa-user"></i></span><span class="nav-text">Team</span></a>
+          <a href="{{ site.baseurl }}/team/"><span class="nav-text">TEAM</span></a>
         </li>
           <!--
         <li class="project-button">
@@ -18,7 +19,7 @@
         </li>
 -->
         <li class="publication-button">
-          <a href="{{ site.baseurl }}/publications/"><span class="nav-icon"><i class="fa fa-book"></i></span><span class="nav-text">Publications</span></a>
+          <a href="{{ site.baseurl }}/publications/"><span class="nav-text">PUBLICATIONS</span></a>
         </li>
 	  </ul>
     </div>
