--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-  <header class="publications-title">
-    <h1>{{ page.title | remove: "| Vis Design Lab" }}</h1>
-  </header>
+
+<div class="banner"> 
+</div>
 
   <article class="publications-content">
 
