--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -3,9 +3,12 @@ layout: default
 ---
 <div class="team">
 
-  <header class="team-title">
+  <!--<header class="team-title">
     <h1>{{ page.title | remove: "| Vis Design Lab" }}</h1>
-  </header>
+  </header>-->
+	  
+	  <div class="banner">
+	  </div>
 
   <article class="team-content-left">
       <h1>Faculty</h1>
