--- a/_includes/person.html
+++ b/_includes/person.html
@@ -2,8 +2,8 @@
 {% for person in site.persons %}
 {% if person.key == include.key  or person.role == include.role %}
 <p>
-    <img alt="{{ person.first_name }} {{ person.last_name }}" class="person-image-small" src="{{ person.image }}">
-    <a href="{{ person.website }}">{{ person.first_name }} {{ person.last_name }}</a><br>
+    <!--<img alt="{{ person.first_name }} {{ person.last_name }}" class="person-image-small" src="{{ person.image }}">-->
+    <a href="{{ person.website }}">{{ person.first_name }} {{ person.last_name }}</a>
     Interests: {{person.interests}}
 </p>
 {% endif %}
