--- a/_includes/publication_list_entry.html
+++ b/_includes/publication_list_entry.html
@@ -25,7 +25,7 @@
 
         {% endfor %}
         <br/>
-        <b> <a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a></b><br/>
+        <span class="paper-title"><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a></span><br/>
         {{ publication.journal }}, {{publication.year}}
     </p>
 
