--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -10,7 +10,7 @@ layout: default
 	  <div class="banner">
 	  </div>
 
-  <article class="team-content-left">
+  <article class="team-content">
       <h1>Faculty</h1>
 
       {% include person.html key="meyer" %}
